# bevy_contact_projective_decals

./: Cargo.toml  README.md
examples/: basic.rs  bench.rs  room.rs  static.rs
src/: decal.rs  decal.wgsl  lib.rs
