[package]
name = "bevy_contact_projective_decals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15"

[dev-dependencies]
bevy-inspector-egui = "0.28"
bevy_panorbit_camera = { version = "0.21.2", features = ["bevy_egui"] }
 
rand = "0.8.5"
