[package]
name = "bevy_contact_projective_decals"
version = "0.16.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.16"

[dev-dependencies]
bevy-inspector-egui = "0.31"
bevy_panorbit_camera = { version = "0.26", features = ["bevy_egui"] }
 
rand = "0.8.5"
